<resources>
    <string name="app_name">Omninventory</string>

    <!-- text that goes in title_bar layout -->
    <string name="main_title_text">OMNINVENTORY</string>
    <string name="details_title_text">ITEM DETAILS</string>
    <string name="edit_title_text">EDIT ITEM</string>
    <string name="add_title_text">ADD ITEM</string>
    <string name="sort_filter_title_text">SORT AND FILTER</string>
    <string name="signup_title_text">SIGN UP</string>
    <string name="login_title_text">LOG IN</string>
    <string name="profile_title_text">USER PROFILE</string>
    <string name="manage_tags_title_text">MANAGE TAGS</string>
    <string name="apply_tags_title_text">APPLY TAGS</string>

    <string name="estimated_value_text">Total Estimated Value</string>

    <!-- Labels for buttons -->
    <string name="sort_button_label">Sort Button</string>
    <string name="tag_button_label">Tag Button</string>
    <string name="add_button_label">Add Item Button123</string>
    <string name="delete_button_label">Delete Item Button</string>
    <string name="profile_button_label">Profile Button</string>
    <string name="back_button_label">Back Button</string>
    <string name="edit_button_label">Edit Button</string>
    <string name="save_button_label">Save Button</string>
    <string name="delete_tag_button_label">Delete Tag Button</string>
    <string name="add_tag_button_label">Add Tag Button</string>

    <!-- Text in ProfileActivity -->
    <string name="profile_picture">Profile picture</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="change_password_title">CHANGE PASSWORD</string>
    <string name="current_password_hint">Current password</string>
    <string name="new_password_hint">New password</string>
    <string name="confirm_new_password_hint">Confirm new password</string>
    <string name="ok_dialog_button">DONE</string>
    <string name="change_name_dialog_title">CHANGE NAME</string>
    <string name="change_name_hint">Name</string>

    <!-- Text in DetailsActivity and EditActivity -->
    <string name="item_name_head">Item Name</string>
    <string name="item_name_placeholder">Placeholder Item Name</string>
    <string name="item_description_head">Item Description</string>
    <string name="item_description_placeholder">this is a placeholder item (short) description</string>
    <string name="item_comment_head">Item Comment</string>
    <string name="item_comment_placeholder">placeholder item (long) comment. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="item_make_head">Make</string>
    <string name="item_model_head">Model</string>
    <string name="item_make_placeholder">Placeholder Make</string>
    <string name="item_model_placeholder">Placeholder Model</string>
    <string name="item_serial_head">Serial Number</string>
    <string name="item_value_head">Estimated Value</string>
    <string name="item_serial_placeholder">123456789</string>
    <string name="item_value_placeholder">$0</string>
    <string name="item_date_head">Date of Purchase</string>
    <string name="item_date_placeholder">2023-11-05</string>
    <string name="item_tags_head">Tags</string>
    <string name="item_tags_placeholder">#placeholder, #tags, #go, #here</string>
    <string name="item_text_head">Images</string>

    <!-- Text in Sort/Filter -->
    <string name="make">Make</string>
    <string name="ascending">ASC</string>
    <string name="descending">DESC</string>
    <string name="description_keywords_autofill">Test</string>
    <string name="make_filter_button_text">Add Make Filter</string>
    <string name="start_date_button">SD BTN</string>
    <string name="end_date_button">ED BTN</string>
    <string name="date_filter_button_text">Add Date Filter</string>
    <string name="description_filter_button_text">Add Description Filter</string>
    <string name="filter_by_tags_button_text">Filter By Tags</string>
    <string name="tag_filter_dialog_header">Filter By Tags</string>
    <string name="tag_filter_dialog_button">Apply</string>

    <string-array name="sort_dropdown_options">
        <item>None</item>
        <item>Date</item>
        <item>Description</item>
        <item>Make</item>
        <item>Estimated Value</item>
        <item>Tags</item>
    </string-array>

    <!-- Text in apply tags activity -->
    <string name="applied_tags_header">APPLIED TAGS</string>
    <string name="unapplied_tags_header">TAG LIST</string>

    <!-- Text in delete item dialog -->
    <string name="delete_dialog">DELETE ITEMS</string>
    <string name="delete_dialog_button">DELETE</string>
    <string name="cancel_dialog_button">CANCEL</string>

    <!-- Text in add tag dialog -->
    <string name="add_tag_dialog">NEW TAG</string>
    <string name="add_tag_dialog_button">ADD</string>
    <string name="add_tag_dialog_hint">Tag Name</string>

    <!-- Text in barcode scan -->
    <string name="barcode_text">SCAN THE BARCODE WITHIN THE WHITE FRAME ABOVE</string>

    <!-- Text in serialno scan -->
    <string name="serialno_scanning_text">SCAN THE SERIAL NUMBER WITHIN THE BLACK BOX ABOVE</string>
    <string name="confirm_button_text">CONFIRM</string>

</resources>