<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/salmon_banner"
        android:text="@string/change_name_dialog_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/blue_banner"/>

    <EditText
        android:id="@+id/change_name_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/change_name_hint"
        android:inputType="textPersonName" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/ok_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/red"
            android:fontFamily="sans-serif"
            android:text="@string/ok_dialog_button"
            app:layout_constraintEnd_toStartOf="@+id/cancel_dialog_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/cancel_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/red"
            android:fontFamily="sans-serif"
            android:text="@string/cancel_dialog_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ok_dialog_button"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>