<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailsActivity">

    <!--Override the android:text attribute in Activity code to "SORT AND FILTER"-->
    <include layout="@layout/title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/sort_dropdown_spinner"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/asc_desc_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/ascending"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/ascending_descending_button">
        </Button>

        <TextView
            android:id="@+id/make_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/sort_dropdown_spinner"
            android:layout_marginTop="10dp">
        </TextView>

        <EditText
            android:id="@+id/make_filter_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/item_edit_edittext"
            android:autofillHints="@string/make"
            android:layout_marginTop="5dp">
        </EditText>

        <Button
            android:layout_gravity="center"
            android:id="@+id/add_make_filter_button"
            style="@style/blue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/make_filter_button_text"
            android:backgroundTint="@color/unclicked_filter_button"></Button>

        <LinearLayout
            android:id="@+id/date_button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">


                <TextView

                    android:id="@+id/start_date_text"
                    android:text="yyy-mm-dd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </TextView>

                <Button
                    android:layout_gravity="center"
                    style="@style/blue_button"
                    android:id="@+id/start_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/unclicked_filter_button"
                    android:text="@string/start_date_button"
                    android:layout_marginStart="10dp">
                </Button>

            </LinearLayout>

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/end_date_text"
                    android:text="yyy-mm-dd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp">
                </TextView>

                <Button
                    android:layout_gravity="center"
                    style="@style/blue_button"
                    android:id="@+id/end_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date_button"
                    android:backgroundTint="@color/unclicked_filter_button"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp">
                </Button>

            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/add_date_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_filter_button_text"
            android:backgroundTint="@color/unclicked_filter_button"
            app:layout_constraintTop_toBottomOf="@+id/date_button_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp">
        </Button>

        <EditText
            android:id="@+id/description_filter_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/add_date_filter_button"
            app:layout_constraintStart_toStartOf="parent"
            android:autofillHints="@string/description_keywords_autofill"
            android:layout_marginTop="10dp">
        </EditText>

        <Button
            android:id="@+id/add_description_filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_filter_button_text"
            android:backgroundTint="@color/unclicked_filter_button"
            app:layout_constraintTop_toBottomOf="@+id/description_filter_edit_text"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp">
        </Button>

        <Button
            android:id="@+id/filter_by_tags_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_by_tags_button_text"
            android:backgroundTint="@color/unclicked_filter_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/banner_bar"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/salmon_banner"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:background="@color/blue_banner"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/blue_banner"
                android:contentDescription="@string/back_button_label"
                android:cropToPadding="false"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/back_64" />

        </LinearLayout>



    </LinearLayout>
</LinearLayout>