<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.camera.view.PreviewView
        android:id="@+id/preview_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/serialno_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="1:1"/>

    <TextView
        android:id="@+id/serialno_text"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/serialno_scanning_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preview_view" />

    <TextView
        android:id="@+id/parsed_serialno_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text=""
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/serialno_text" />

    <Button
        android:id="@+id/serialno_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel_dialog_button"
        app:layout_constraintTop_toBottomOf="@+id/serialno_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/serialno_confirm_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:id="@+id/serialno_confirm_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button_text"
        app:layout_constraintTop_toBottomOf="@+id/serialno_text"
        app:layout_constraintStart_toEndOf="@+id/serialno_cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>
