<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="300dp"
    android:background="@drawable/rounded_dialog">

    <!-- title hard-written in so we don't have to deal with setting title field on a dialog -->
    <TextView
        android:id="@+id/delete_items_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:background="@drawable/rounded_title_bar"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/delete_dialog">
    </TextView>
    <!-- Override the android:text attribute in Activity code -->

    <TextView
        android:id="@+id/title_band2"
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:background="?attr/colorSecondary">
    </TextView>

    <TextView
        android:id="@+id/delete_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:text="Delete Items Text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginHorizontal="10dp">

        <Button
            android:id="@+id/cancel_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorSecondary"
            android:textColor="?colorOnSecondary"
            android:fontFamily="sans-serif"
            android:text="@string/cancel_dialog_button"
            app:layout_constraintEnd_toStartOf="@+id/delete_dialog_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/delete_dialog_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?colorPrimary"
            android:textColor="?colorOnPrimary"
            android:fontFamily="sans-serif"
            android:text="@string/delete_dialog_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancel_dialog_button"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>